Simple html update

--- a/perf_report_template.html
+++ b/perf_report_template.html
@@ -45,6 +45,9 @@
   </head>
   <body role="document">
     <div class="container" role="main">
+      <div class="page-header">
+        <h1>Performance & Scale testing</h1>
+      </div>
 
       <div class="page-header">
         <h2>Action Timings</h2>
