Make minor fixes as per MR.

--- a/perf_report_template.html
+++ b/perf_report_template.html
@@ -46,7 +46,7 @@
   <body role="document">
     <div class="container" role="main">
       <div class="page-header">
-        <h1>Performance & Scale testing</h1>
+        <h1>Performance &amp; Scale testing</h1>
       </div>
 
       <div class="page-header">
