--- a/perf_report_template.html
+++ b/perf_report_template.html
@@ -119,8 +119,11 @@
       <h2>Network Usage</h2>
       <img src="file://{{network_graph}}" alt="Network Usage Graph" />
 
-      <h2>MongoDB Statistics</h2>
-      <img src="file://{{mongo_graph}}" alt="MongoDB Details Graph" />
+      <h2>MongoDB Action Statistics</h2>
+      <img src="file://{{mongo_graph}}" alt="MongoDB Actions Details Graph" />
+
+      <h2>MongoDB Memory Usage Statistics</h2>
+      <img src="file://{{mongo_memory_graph}}" alt="MongoDB Memory Usage Details Graph" />
 
       <div class="page-header">
         <h1>Log Breakdown</h1>
