--- a/perf_report_template.html
+++ b/perf_report_template.html
@@ -119,11 +119,15 @@
       <h2>Network Usage</h2>
       <img src="file://{{network_graph}}" alt="Network Usage Graph" />
 
+      {% if mongo_graph is not none %}
       <h2>MongoDB Action Statistics</h2>
       <img src="file://{{mongo_graph}}" alt="MongoDB Actions Details Graph" />
+      {% endif %}
 
+      {% if mongo_memory_graph is not none %}
       <h2>MongoDB Memory Usage Statistics</h2>
       <img src="file://{{mongo_memory_graph}}" alt="MongoDB Memory Usage Details Graph" />
+      {% endif %}
 
       <div class="page-header">
         <h1>Log Breakdown</h1>
