--- a/perf_report_template.html
+++ b/perf_report_template.html
@@ -20,6 +20,7 @@
             margin: 0;
             margin-left: 20px;
             margin-bottom: 20px;
+            margin-top: 8px;
             padding: 0;
             vertical-align: 0;
             display: inline-block;
@@ -47,6 +48,10 @@
             height: 11px;
             padding: 0;
             margin: 0 5px;
+        }
+
+        ul.tabs li:last-child::after {
+            display: none;
         }
 
         .tab-content {
